--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,4 +81,10 @@
   body {
     @apply bg-background text-foreground;
   }
+  .free-user-no-copy {
+    user-select: none;
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+ */
+  }
 }
